made the game take up the whole page

--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
+html,body {
+	margin:0px;
+	padding:0px;
+	overflow:hidden;
+}
 
 .gameContainer{
-	height:600px;
+	height:100vh;
 }
 .container{
 	position:relative;
